<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bookit.MainActivity">

    <item
        android:id="@+id/menu_toggle"
        android:title="Lender"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notifications_tab"
        android:icon="@drawable/notification_icon"
        android:title="Notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_account"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom" />

</menu>