<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/MyBooksFragment"
        android:enabled="true"
        android:icon="@drawable/ic_my_books"
        android:title="@string/nav_bar_MyBooks" />

    <item
        android:id="@+id/AddBookFragment"
        android:enabled="true"
        android:icon="@drawable/ic_add_book"
        android:title="@string/nav_bar_AddBook" />

    <item
        android:id="@+id/ManageRequestsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_request"
        android:title="@string/nav_bar_ManageRequests" />

    <!--    <item-->
    <!--        android:id="@+id/ScanBookActivity"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@mipmap/scan_icon_foreground"-->
    <!--        android:title="@string/scan_book" />-->

    <!--  add more items in bottom nav menu if wanted  -->

</menu>